...
        
        if currentGame.isBetterThan(bestGameResult) {
            message += "\n\nРекордная игра"
        }
        
        return QuizResultsViewModel(
            title: "Этот раунд окончен!",
            text: message,
            buttonText: "Сыграть ещё раз"
        )
    }
}

...
